	  /dev/ulptN.
	- DeletePrinter() didn't remove the printer from any
	  classes it was a member of.
	- DeletePrinterFromClass() didn't preserve the
	  implicit status of a class.
	- DeletePrinterFromClasses() didn't remove printers
	  from implicit classes.
	- StartJob() didn't send the job-sheets, job-priority,
	  and job-hold-until attributes to remote printers.
	- The pstops and imagetops filters now generate copies
	  using the appropriate method for a Level 1, 2, or 3
	  printer since some Level 2/3 printers don't support
	  the /#copies variable anymore.
	- The man page for cups-lpd did not mention the "-o"
	  option.
	- The IPP backend didn't handle version-not-supported
	  errors and revert to IPP/1.0 (previously it only checked
	  for a bad-request error)
	- Caldera fix: lpc now reports unimplemented commands as
	  unimplemented, not invalid.
	- Caldera fix: lpq didn't recognize BSD lpq "-a" option.
	- Caldera fix: lpr didn't recognize BSD lpr "-1", "-2",
	  "-3", "-4", "-q", or "-U" options.
	- RedHat fixes: patches to GNU Ghostscript
	- SuSE fix: temp file creation patch to GNU Ghostscript
	  (pstoraster).
	- SuSE fix: remove cgi-bin/abort.c and cgi-bin/email.c,
	  which are not used.
	- SuSE fix: missing NULL check in cgi_initialize_post().
	- SuSE fix: potential buffer overflows in
	  cgi_initialize_string().
	- SuSE fix: potential buffer overflows in
	  ippSetCGIVars()
	- SuSE fix: more NULL checks in ppdOpen(); also make
	  sure that all memory is freed on error to avoid memory
	  leaks.
	- SuSE fix: Exit from child if setgid() or setuid()
	  fails.
	- SuSE fix: Added setgroups() calls after setgid() and
	  setuid() calls.
	- SuSE fix: potential buffer overflows in httpEncode64()
	  calls.
	- SuSE fix: potential buffer overflows in httpSeparate()
	- SuSE fix: potential buffer overflows in ippWrite() for
	  bad input.
	- SuSE fix: potential nul skip in ppd_decode() for
	  missing hex digits.


CHANGES IN CUPS V1.1.6-2
